--- a/School/Schoo.Management.Domain.Entities/Schoo.Management.Domain.Entities.csproj
+++ b/School/Schoo.Management.Domain.Entities/Schoo.Management.Domain.Entities.csproj
@@ -47,6 +47,12 @@
     <Compile Include="Instructor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Infrastructure.Utils\Infrastructure.Utils.csproj">
+      <Project>{17ABB20F-7FFB-439A-89AC-111B979780AC}</Project>
+      <Name>Infrastructure.Utils</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
