Fixing naming and adding application layer and console UI

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@
 /School/School.FullData/obj/Debug
 /School/School.Management.Services.Contracts/obj/Debug
 /School/School.Management.Services.Implementation/obj/Debug
+/School/Schoo.Management.Application.Contracts/bin/Debug
+/School/Schoo.Management.Application.Implementation/bin/Debug
+/School/School.Management.Presentation.Console/bin/Debug
+/School/School.Management.Services.Contracts/bin/Debug
+/School/School.Management.Services.Implementation/bin/Debug
+/School/School.Management.Presentation.Console/obj/Debug
+/School/School.FullData/bin/Debug
