--- a/School/Schoo.Management.Domain.Entities/School.Management.Domain.Entities.csproj
+++ b/School/Schoo.Management.Domain.Entities/School.Management.Domain.Entities.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{D409CB49-45AE-47AD-A38E-5EAC33F52528}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Schoo.Management.Domain.Entities</RootNamespace>
-    <AssemblyName>Schoo.Management.Domain.Entities</AssemblyName>
+    <RootNamespace>School.Management.Domain.Entities</RootNamespace>
+    <AssemblyName>School.Management.Domain.Entities</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
