update folder and fix loading to be default to IIS express

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@
 /School/ٍSchool.Management.Services.Router/obj/Debug
 /School/ٍSchool.Management.Services.Routing/bin
 /School/ٍSchool.Management.Services.Routing/obj/Debug
+/School/School.Management.Services.DiscoverableService/obj/Debug
+/School/School.Management.Services.DiscoverableService/bin/roslyn
+/School/School.Management.Services.Router/obj/Debug
+/School/School.Management.Services.Router/bin/roslyn
