--- a/School/School.Management.Services.IISHTTPS/School.Management.Services.IISHTTPS.csproj
+++ b/School/School.Management.Services.IISHTTPS/School.Management.Services.IISHTTPS.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>School.Management.Services.IISHTTPS</RootNamespace>
     <AssemblyName>School.Management.Services.IISHTTPS</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -161,7 +161,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>61677</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>https://localhost/School.Management.Services.IISHTTPS</IISUrl>
+          <IISUrl>http://localhost:61677/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
