--- a/School/School.Management.Services.IISHosting/School.Management.Services.IISHosting.csproj
+++ b/School/School.Management.Services.IISHosting/School.Management.Services.IISHosting.csproj
@@ -16,7 +16,7 @@
     <RootNamespace>School.Management.Services.IISHosting</RootNamespace>
     <AssemblyName>School.Management.Services.IISHosting</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
-    <UseIISExpress>false</UseIISExpress>
+    <UseIISExpress>true</UseIISExpress>
     <IISExpressSSLPort />
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
@@ -179,7 +179,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>43409</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://start/School.Management.Services.IISHosting</IISUrl>
+          <IISUrl>http://localhost:43409/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
